--- a/config.toml
+++ b/config.toml
@@ -12,11 +12,11 @@ copyright = '© Yuzu Daily'
 [params]
     mode="auto" # color-mode → light,dark,toggle or auto
 	useCDN=false # don't use CDNs for fonts and icons, instead serve them locally.
-	subtitle = "Read articles everyday"
+	subtitle = "高品質な長い記事の紹介と分析"
 	mathjax = true # enable MathJax support
 	katex = true # enable KaTeX support
 
 [[menu.main]]
 name = "All"
 url = "/issues"
-weight = 2
+weight = 1
